# geogram-esp32

./: .gitignore  README.md  flash-c3.sh
code/: README.md  monitor.sh  platformio.ini  sdkconfig.defaults  sdkconfig.esp32_generic  sdkconfig.esp32c3_mini  sdkconfig.esp32s3_epaper_1in54
code/boards/: sdkconfig.esp32c3_mini  sdkconfig.esp32s3_epaper_1in54
code/components/geogram_console/: CMakeLists.txt  cmd_config.c  cmd_display.c  cmd_ftp.c  cmd_mesh.c  cmd_system.c  console.c  console.h
code/components/geogram_dns/: dns_server.c
code/components/geogram_ftp/: CMakeLists.txt
code/components/geogram_http/: CMakeLists.txt  http_server.c  http_server.h
code/components/geogram_json/: json_utils.c  json_utils.h
code/components/geogram_lvgl/: CMakeLists.txt  lvgl_port.c
code/components/geogram_mesh/: CMakeLists.txt  Kconfig.projbuild  mesh_bridge.c  mesh_bsp.c  mesh_chat.c
code/components/geogram_model_epaper_1in54/: CMakeLists.txt  board_power.cpp  model_config.h  model_init.c  model_init.h
code/components/geogram_shtc3/: shtc3.cpp
code/components/geogram_station/: CMakeLists.txt  station.c  station.h
code/components/geogram_telnet/: telnet_server.c
code/components/geogram_tiles/: CMakeLists.txt
code/components/geogram_ui/: geogram_ui.c  geogram_ui.h
code/components/geogram_updates/: CMakeLists.txt
code/components/geogram_wifi/: wifi_bsp.c
code/components/geogram_ws/: ws_server.c  ws_server.h
code/include/: app_config.h
code/scripts/: pre_build.py
code/src/: main.cpp
docs/: chat.md  logo.txt
(+3 files in other folders)
